# GranEscala_T1

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: EDA.ipynb
notebooks/.ipynb_checkpoints/: Model-checkpoint.ipynb
